--- a/carrinho.html
+++ b/carrinho.html
@@ -53,7 +53,7 @@
                     </li>
                     <li>
                       <i class="fa-solid fa-heart menu-lista"></i>
-                      a href="#">Favoritos</a>
+                      <a href="#">Favoritos</a>
                     </li>
                     <li>
                       <i class="fa-solid fa-hand-holding-heart menu-lista"></i>
